--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -200,13 +200,13 @@ jobs:
       with:
         path: emqx-rel
     - name: update to github and emqx.io
-      if: github.event_name == "tag"
+      if: github.event_name == "repository_dispatch"
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         for var in $(ls ./packages); do ./emqx-rel/.github/workflows/release/upload-github-release-asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=${{ secrets.AccessToken }} ; done
         curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version
     - name: push docker image to docker hub
-      if: github.event_name == "tag"
+      if: github.event_name == "repository_dispatch"
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -
@@ -215,7 +215,7 @@ jobs:
         sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-docker-push
         sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-edge-docker-push
     - name: update repo.emqx.io
-      if: github.event_name == "tag"
+      if: github.event_name == "repository_dispatch"
       run: |
         crumb=$(curl ${JENKINS_URL}/crumbIssuer/api/json --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }})
         crumb=${crumb#*"crumb\":\""}
