--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,6 @@ on:
       - develop
       - master
       - release-*
-      - workflow
     tags:
       - v*
   repository_dispatch:
@@ -97,8 +96,8 @@ jobs:
       run: |
         sudo docker run --rm --privileged multiarch/qemu-user-static:register --reset
         sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g") -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
-        for var in $(ls _packages/emqx ); do sudo sh -c "sha256 _packages/emqx/$var > _packages/emqx/$var.sha256"; done
-        for var in $(ls _packages/emqx-edge ); do sudo sh -c "sha256 _packages/emqx-edge/$var > _packages/emqx-edge/$var.sha256"; done
+        for var in $(ls _packages/emqx ); do sudo sh -c "sha256sum _packages/emqx/$var > _packages/emqx/$var.sha256"; done
+        for var in $(ls _packages/emqx-edge ); do sudo sh -c "sha256sum _packages/emqx-edge/$var > _packages/emqx-edge/$var.sha256"; done
     - name: set aws
       run: |
         curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -147,10 +146,10 @@ jobs:
         sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
         sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
-        for var in $(ls emqx-rel/_packages/emqx ); do sudo sh -c "sha256 emqx-rel/_packages/emqx/$var > emqx-rel/_packages/emqx/$var.sha256"; done
+        for var in $(ls emqx-rel/_packages/emqx ); do sudo sh -c "sha256sum emqx-rel/_packages/emqx/$var > emqx-rel/_packages/emqx/$var.sha256"; done
         sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
         sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
-        for var in $(ls emqx-rel/_packages/emqx-edge ); do sudo sh -c "sha256 emqx-rel/_packages/emqx-edge/$var > emqx-rel/_packages/emqx-edge/$var.sha256"; done
+        for var in $(ls emqx-rel/_packages/emqx-edge ); do sudo sh -c "sha256sum emqx-rel/_packages/emqx-edge/$var > emqx-rel/_packages/emqx-edge/$var.sha256"; done
     - name: docker test
       if: matrix.arch[0] == 'amd64'
       run: |
