--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ on:
     tags:
       - v*
   repository_dispatch:
+    types: [release]
 
 jobs:
   win:
@@ -143,20 +144,20 @@ jobs:
         ARCH: ${{ matrix.arch[0] }}
         QEMU_ARCH: ${{ matrix.arch[1] }}
       run: |
-        EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
+        version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
-        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
+        sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
+        sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
         cd emqx-rel/_packages/emqx && for var in $(ls emqx-docker-* ); do sudo sh -c "sha256sum $var > $var.sha256"; done && cd -
-        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
-        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
+        sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
+        sudo EMQX_DEPS_DEFAULT_VSN=$version ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
         cd emqx-rel/_packages/emqx-edge && for var in $(ls emqx-edge-docker-* ); do sudo sh -c "sha256sum $var > $var.sha256"; done && cd -
     - name: docker test
       if: matrix.arch[0] == 'amd64'
       run: |
-        EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-        sudo TARGET=emqx/emqx EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
-        sudo TARGET=emqx/emqx-edge EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
+        version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
+        sudo TARGET=emqx/emqx EMQX_DEPS_DEFAULT_VSN=$version PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
+        sudo TARGET=emqx/emqx-edge EMQX_DEPS_DEFAULT_VSN=$version PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
     - name: set aws
       run: |
         curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -198,13 +199,15 @@ jobs:
       with:
         path: emqx-rel
     - name: update to github and emqx.io
-      if: github.ref == 'refs/tags/v*'
+      # if: github.ref == 'refs/tags/v*'
+      if: github.event_name == 'repository_dispatch'
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         for var in $(ls ./packages); do ./emqx-rel/.github/workflows/release/upload-github-release-asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=${{ secrets.AccessToken }} ; done
         curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version
     - name: push docker image to docker hub
-      if: github.ref == 'refs/tags/v*'
+      # if: github.ref == 'refs/tags/v*'
+      if: github.event_name == 'repository_dispatch'
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
         cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -
@@ -213,7 +216,8 @@ jobs:
         sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-docker-push
         sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-edge-docker-push
     - name: update repo.emqx.io
-      if: github.ref == 'refs/tags/v*'
+      # if: github.ref == 'refs/tags/v*'
+      if: github.event_name == 'repository_dispatch'
       run: |
         crumb=$(curl ${JENKINS_URL}/crumbIssuer/api/json --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }})
         crumb=${crumb#*"crumb\":\""}
