--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -193,34 +193,40 @@ jobs:
         aws2 s3 cp --recursive s3://packages.emqx.io/emqx/$version ./packages
         aws2 s3 cp --recursive s3://packages.emqx.io/emqx-edge/$version ./packages
         for var in $(ls packages | grep -v sha256 ); do sha256sum -c <(grep $var $var.sha256) ;done
-        aws2 cloudfront create-invalidation --distribution-id E3TYD0WSP4S14P --paths "/emqx-ce/$version/*"
-        aws2 cloudfront create-invalidation --distribution-id E3TYD0WSP4S14P --paths "/emqx-edge/$version/*"
     - uses: actions/checkout@v2
       with:
         path: emqx-rel
     - name: update to github and emqx.io
       # if: github.ref == 'refs/tags/v*'
-      if: github.event_name == 'repository_dispatch'
+      # if: github.event_name == 'repository_dispatch'
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-        for var in $(ls ./packages); do ./emqx-rel/.github/workflows/release/upload-github-release-asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=${{ secrets.AccessToken }} ; done
-        curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version
+        if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?")]; then
+ aws2 cloudfront create-invalidation --distribution-id E3TYD0WSP4S14P --paths "/emqx-ce/$version/*,/emqx-edge/$version/*";
+ for var in $(ls ./packages); do ./emqx-rel/.github/workflows/release/upload-github-release-asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=${{ secrets.AccessToken }} ; done;
+ curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version;
+ fi
     - name: push docker image to docker hub
-      # if: github.ref == 'refs/tags/v*'
-      if: github.event_name == 'repository_dispatch'
+      if: github.ref == 'refs/tags/v*'
+      # if: github.event_name == 'repository_dispatch'
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-        cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -
-        echo ${{ secrets.DockerHubPassword }} |sudo docker login -u ${{ secrets.DockerHubUser }} --password-stdin
-        sudo make -C emqx-rel/deploy/docker prepare
-        sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-docker-push
-        sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-edge-docker-push
+        if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?")]; then
+ cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -;
+ echo ${{ secrets.DockerHubPassword }} |sudo docker login -u ${{ secrets.DockerHubUser }} --password-stdin;
+ sudo make -C emqx-rel/deploy/docker prepare;
+ sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-docker-push;
+ sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-edge-docker-push;
+ fi
     - name: update repo.emqx.io
-      # if: github.ref == 'refs/tags/v*'
-      if: github.event_name == 'repository_dispatch'
+      if: github.ref == 'refs/tags/v*'
+      # if: github.event_name == 'repository_dispatch'
       run: |
-        crumb=$(curl ${JENKINS_URL}/crumbIssuer/api/json --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }})
-        crumb=${crumb#*"crumb\":\""}
-        crumb=${crumb%%\"*}
-        parameter="[{'name':'REPOPATH', 'value':'/repos'}, {'name':'version', 'value':$version}, {'name':'emqx_ce', 'value':true}, {'name':'emqx_ee', 'value':false}]"
-        curl -X POST ${JENKINS_URL}/job/05_EMQX_Upload_Repos/build --header "Jenkins-Crumb:${crumb}" --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}  --data-urlencode json="{'parameter': ${parameter}}"     
+        version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
+ if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?")]; then
+ crumb=$(curl ${JENKINS_URL}/crumbIssuer/api/json --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }});
+ crumb=${crumb#*"crumb\":\""};
+ crumb=${crumb%%\"*};
+ parameter="[{'name':'REPOPATH', 'value':'/repos'}, {'name':'version', 'value':$version}, {'name':'emqx_ce', 'value':true}, {'name':'emqx_ee', 'value':false}]";
+ curl -X POST ${JENKINS_URL}/job/05_EMQX_Upload_Repos/build --header "Jenkins-Crumb:${crumb}" --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}  --data-urlencode json="{'parameter': ${parameter}}";
+ fi
