--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,32 +13,32 @@ on:
     types: [release]
 
 jobs:
-  win:
-    runs-on: windows-latest
+  # win:
+  #   runs-on: windows-latest
 
-    steps:
-    - uses: actions/checkout@v1
-    - name: checkout
-      # run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
-      run: git checkout develop
-    - name: build
-      run: |
-        set-executionpolicy remotesigned -s cu
-        iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop install sudo curl 7zip aws erlang
-        $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
-        make emqx
-        mkdir -p _packages/emqx
-        $pkg_name = "emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip"
-        Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/$pkg_name
-        mv _build/emqx/rel/$pkg_name _packages/emqx
-        sudo ./_build/emqx/rel/emqx/bin/emqx start
-        sudo ./_build/emqx/rel/emqx/bin/emqx stop
-        Get-FileHash -Path "_packages/emqx/$pkg_name" | Format-List | sed -n '4p' | awk '{print $3}' > _packages/emqx/$pkg_name.sha256
-        aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }} 
-        aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }} 
-        aws configure set default.region us-west-2
-        aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$pkg_name
+  #   steps:
+  #   - uses: actions/checkout@v1
+  #   - name: checkout
+  #     # run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
+  #     run: git checkout develop
+  #   - name: build
+  #     run: |
+  #       set-executionpolicy remotesigned -s cu
+  #       iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
+  #       scoop install sudo curl 7zip aws erlang
+  #       $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
+  #       make emqx
+  #       mkdir -p _packages/emqx
+  #       $pkg_name = "emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip"
+  #       Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/$pkg_name
+  #       mv _build/emqx/rel/$pkg_name _packages/emqx
+  #       sudo ./_build/emqx/rel/emqx/bin/emqx start
+  #       sudo ./_build/emqx/rel/emqx/bin/emqx stop
+  #       Get-FileHash -Path "_packages/emqx/$pkg_name" | Format-List | sed -n '4p' | awk '{print $3}' > _packages/emqx/$pkg_name.sha256
+  #       aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }} 
+  #       aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }} 
+  #       aws configure set default.region us-west-2
+  #       aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$pkg_name
 
   # mac:
   #   runs-on: macos-latest
@@ -178,7 +178,6 @@ jobs:
     runs-on: ubuntu-latest
 
     # needs: [win, mac, linux, docker]
-    needs: [win]
 
     steps:
     - name: set aws
@@ -199,31 +198,34 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: emqx-rel
-    # - name: update to github and emqx.io
-    #   run: |
-    #     version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-    #     if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?")]; then
-    #       aws2 cloudfront create-invalidation --distribution-id E3TYD0WSP4S14P --paths "/emqx-ce/$version/*,/emqx-edge/$version/*";
-    #       for var in $(ls ./packages); do ./emqx-rel/.github/workflows/release/upload-github-release-asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=${{ secrets.AccessToken }} ; done;
-    #       curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version;
-    #     fi
-    # - name: push docker image to docker hub
-    #   run: |
-    #     version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-    #     if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?")]; then
-    #       cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -;
-    #       echo ${{ secrets.DockerHubPassword }} |sudo docker login -u ${{ secrets.DockerHubUser }} --password-stdin;
-    #       sudo make -C emqx-rel/deploy/docker prepare;
-    #       sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-docker-push;
-    #       sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-edge-docker-push;
-    #     fi
+    - name: update to github and emqx.io
+      run: |
+        version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
+        version=v4.0-rc.4
+        if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
+          aws2 cloudfront create-invalidation --distribution-id E3TYD0WSP4S14P --paths "/emqx-ce/$version/*,/emqx-edge/$version/*"
+          for var in $(ls ./packages); do ./emqx-rel/.github/workflows/release/upload-github-release-asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=${{ secrets.AccessToken }} ; done
+          curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version
+        fi
+    - name: push docker image to docker hub
+      run: |
+        version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
+        version=v4.0-rc.4
+        if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
+          cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -
+          echo ${{ secrets.DockerHubPassword }} |sudo docker login -u ${{ secrets.DockerHubUser }} --password-stdin
+          sudo make -C emqx-rel/deploy/docker prepare
+          sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-docker-push
+          sudo EMQX_DEPS_DEFAULT_VSN=$version make -C emqx-rel emqx-edge-docker-push
+        fi
     - name: update repo.emqx.io
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
+        version=v4.0-rc.4
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
-          crumb=$(curl ${JENKINS_URL}/crumbIssuer/api/json --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }})
+          crumb=$(curl ${{  JenkinsUrl }}/crumbIssuer/api/json --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }})
           crumb=${crumb#*"crumb\":\""}
           crumb=${crumb%%\"*}
           parameter="[{'name':'REPOPATH', 'value':'/repos'}, {'name':'version', 'value':$version}, {'name':'emqx_ce', 'value':true}, {'name':'emqx_ee', 'value':false}]"
-          curl -X POST ${JENKINS_URL}/job/05_EMQX_Upload_Repos/build --header "Jenkins-Crumb:${crumb}" --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}  --data-urlencode json="{'parameter': ${parameter}}"
+          curl -X POST ${{ JENKINS_URL }}/job/05_EMQX_Upload_Repos/build --header "Jenkins-Crumb:${crumb}" --user ${{ secrets.JenkinsUser }}:${{ secrets.JenkinsPassword }}  --data-urlencode json="{'parameter': ${parameter}}"
         fi
